# DetectiveGame_MB_Project

./: CMakeLists.txt  MB_project.pptx  PDA.cpp  PDA.h  Parser.cpp  Parser.h  README.md  game script.txt  game.json  main.cpp
Assets/: game.json
CFG/: cfg.cpp  cfg.h
Game/: Game.cpp  Game.h  State.cpp  State.h  StateManager.cpp  StateManager.h
LALRParser/include/: LALR_Parser.h  ParsingTable.h  cfg.h
LALRParser/src/: LALR_Parser.cpp  ParsingTable.cpp  cfg.cpp
LRParser/include/: cfg.h  lrparser.h  parsing_table.h
LRParser/src/: cfg.cpp  lrparser.cpp  parsing_table.cpp
PDA/: PDA.cpp  PDA.h  game.json
